# Proprio-Prosthetics-Model

./: .gitignore
Flywheel Design/src/: CMakeLists.txt  NeuronServer.py  make_fr_animation.py  mujoco2py_functions.hpp  mujoco_tracking_side_by_side.py  simulate.cpp
Old/Flywheel Design/src/: ServeSiteCoords.py  mujoco2py_functions.cpp  murdoc.xml  simulate.cpp  starbuck 01.xml
Old/Rendering View/src/: murdoc.xml  simulate.cpp
Old/src/: CMakeLists.txt  LICENSE.txt  README.txt  key_5293.txt
Rendering View/src/: CMakeLists.txt  aviToFrame.py
Version-2-0/: CMakeLists.txt  animate_example.py  helper_functions.py  make_xyz_animation.py  simulate.cpp
Version-2-0/Resources/Murdoc/: sacrum_notail.stl
Version-2-0/src/: CMakeLists.txt  ServeSiteCoords.py  basic.cpp  basic_config.hpp  functions_config.hpp  mujoco2py_functions.cpp  mujoco2py_functions.hpp  mujoco_tracking_side_by_side.py  murdoc.xml  starbuck.xml
Version-3-0/: Control_script.py  animate.py  animate_plot.py  calculate_ia.py  cheney_1976_recreation.py  combine_video_kinematics_fr.py  combine_video_kinematics_fr_chair.py  combine_video_kinematics_fr_grf_emg.py  combine_videos.py  compare_kinematics.py  constDict.py  constants.py  filter_kinematics.py  fit_seated_to_kinematics.py  fit_to_kinematics.py  fit_treadmill_to_kinematics.py  gen_model.py  get_activations.py  get_model_locations.py  get_raw_locations.py  get_toe_locations.py  helper_functions.py  interpret_statistics.py  inverse_dynamics.py  inverse_kinematics.py  murdoc.xml  murdoc_gen.xml  murdoc_seated_template-Copy.xml  murdoc_seated_template.xml  murdoc_template.xml  murdoc_template_floating.xml  murdoc_template_mobile_seat.xml  murdoc_template_mobile_treadmill.xml  murdoc_template_mobile_treadmill_zero.xml  murdoc_template_seat.xml  murdoc_template_static_seat.xml  murdoc_template_static_treadmill.xml  murdoc_template_toes_floating.xml  murdoc_template_toes_treadmill.xml  murdoc_template_treadmill.xml  (+13 more)
Version-3-0/Resources/Murdoc/: 2017-10-06-Scene.mrml  2017-10-27-Aligned-To-Pelvis-Origin.mrml  Femur_Left-PO.stl  Femur_Left.stl  Femur_Right-PO.stl  Femur_Right.stl  Fiducials-PO.fcsv  Fiducials.fcsv  Fiducials_old.fcsv  Foot_Left-PO.stl  Foot_Left.stl  Foot_Right-PO.stl  Foot_Right.stl  Pelvis-PO.stl  Pelvis.stl  Shin_Left-PO.stl  Shin_Left.stl  Shin_Right-PO.stl  Shin_Right.stl  alignToPelvisOrigin.h5
Version-3-0/Resources/Murdoc/Aligned-To-Pelvis/: 2017-10-27-Scene.mrml  AnnotationROI.acsv  Femur_Left-Aligned-To-Pelvis.stl  Femur_Left-Flipped.stl  Femur_Right-Aligned-To-Pelvis.stl  Fiducials-Left.fcsv  Fiducials-Misc.fcsv  Fiducials-Right.fcsv  Fiducials.fcsv  Foot_Left-Aligned-To-Pelvis.stl  Foot_Left-Flipped.stl  Foot_Right-Aligned-To-Pelvis.stl  Pelvis-Aligned-To-Pelvis.stl  Sagittal-Flip - Copy.h5  Shin_Left-Aligned-To-Pelvis.stl  Shin_Left-Flipped.stl  Shin_Right-Aligned-To-Pelvis.stl  VolumeProperty.vp
Version-3-0/Resources/Murdoc/Mobile Foot/: 2017-11-05-Scene.mrml  2017-11-06-Scene.mrml  AnnotationROI.acsv  AnnotationROI_1.acsv  CT-AAA2.vp  Femur_Left.stl  Femur_Right.stl  Fiducials-Left.fcsv  Fiducials-Misc.fcsv  Fiducials-Right.fcsv  Fiducials.fcsv  Foot_Left.stl  Foot_Right.stl  LinearTransform_3.h5  Pelvis.stl  Shin_Left.stl  Shin_Right.stl  Toes_Left.stl  Toes_Right.stl
Version-3-0/figure_scripts/: combine_videos_DARPA_10112017.py
